# kria-vitis-platforms

./: .gitignore  .gitmodules  Jenkinsfile  LICENSE  Makefile  README  README.md  status.txt
IVAS/: build-ivas-essential.sh  clean-ivas-essential.sh
IVAS/ivas-accel-hw/: Makefile
IVAS/ivas-accel-hw/multiscaler/: runhls.tcl
IVAS/ivas-accel-sw-libs/: meson.build  meson_options.txt
IVAS/ivas-accel-sw-libs/ivas_xboundingbox/: kernel_boundingbox_facedetect.json
IVAS/ivas-accel-sw-libs/ivas_xdpuinfer/: cmd_resnet50.sh  cmd_runtime.sh  meson.build  run_model.sh
IVAS/ivas-accel-sw-libs/ivas_xdpuinfer/json_files/: kernel_addruntimemeta.json  kernel_densebox_320_320.json  kernel_densebox_640_360.json  kernel_refinedet_pruned_0_96.json  kernel_reid.json  kernel_resnet18.json  kernel_resnet_v1_50_tf.json  kernel_runtime.json  kernel_ssd_mobilenet_v2.json  kernel_ssd_mobilenet_v2_coco_tf.json  kernel_yolov2_voc_pruned_0_77.json  kernel_yolov3_adas_pruned_0_9.json
IVAS/ivas-accel-sw-libs/ivas_xdpuinfer/src/: ivas_xclassification.cpp  ivas_xdpuinfer.cpp  ivas_xdputest.cpp  ivas_xfacedetect.cpp  ivas_xfacedetect.hpp  ivas_xrefinedet.cpp  ivas_xrefinedet.hpp  ivas_xreid.cpp  ivas_xssd.cpp  ivas_xssd.hpp  ivas_xtfssd.cpp  ivas_xtfssd.hpp  ivas_xyolov2.cpp  ivas_xyolov3.cpp  ivas_xyolov3.hpp
IVAS/ivas-examples/: README.md
IVAS/ivas-examples/DC/: README.md
IVAS/ivas-gst-plugins/: meson.build  meson_options.txt
IVAS/ivas-gst-plugins/gst/roigen/: meson.build
IVAS/ivas-platforms/: README.md
IVAS/ivas-platforms/DC/: README.md
VAI/: README  build.sh
VAI/target_factory/src/: CMakeLists.txt
VAI/vart/: cmake.sh
VAI/vart/cpu-runner/: CMakeLists.txt
VAI/vart/cpu-runner/config/: SIMCfg.txt  cl.sh  config.txt  debug.sh
VAI/vart/cpu-runner/include/: cpu_base_inc.hpp  cpu_cfg.hpp  cpu_helper.hpp  cpu_op_base.hpp  cpu_op_visitor.hpp  cpu_reg_func.hpp  cpu_runner.hpp  cpu_std_inc.hpp  cpu_tensor_buffer.hpp  cpu_util.hpp  load_cfg.hpp
VAI/vart/cpu-runner/src/: cpu_cfg.cpp  cpu_helper.cpp  cpu_op_base.cpp  cpu_reg_func.cpp  cpu_runner.cpp  cpu_tb_factory.cpp  cpu_tb_factory.hpp  cpu_tensor_buffer.cpp  load_cfg.cpp  op_schedule.hpp
VAI/vart/cpu-runner/src/alg/: conv_2_gemm.hpp  pair_hash.hpp
VAI/vart/cpu-runner/src/api/: c_cpu_op_api.hpp  c_cpu_runner_api.cpp  c_cpu_runner_api.hpp  c_xmodel_api.cpp
VAI/vart/cpu-runner/src/op/: avg_pool.cpp  binary_add.cpp  binary_base.cpp  binary_base.hpp  binary_div.hpp  binary_mul.cpp  binary_sub.cpp  binary_sub.hpp  bn.cpp  bn.hpp  concat.hpp  const.hpp  conv2d.cpp  conv2d_fix.cpp  conv2d_fix.hpp  conv_base.hpp  copy.cpp  copy.hpp  downsample_fix.hpp  dwconv.cpp  dwconv_base.cpp  dwconv_fix.cpp  dwconv_fix.hpp  eltwise.hpp  eltwise_fix.cpp  eltwise_fix.hpp  fix.hpp  fix2float.cpp  float2fix.hpp  l2norm.hpp  leaky_relu.cpp  leaky_relu.hpp  matmul.hpp  max_pool.cpp  max_pool.hpp  mul.hpp  pad.cpp  permute.cpp  permute.hpp  pool_base.cpp  (+33 more)
VAI/vart/cpu-runner/src/sample/: example.cpp  user_runner.hpp  xmodel_run_sample.cpp  xmodel_run_sample.hpp
VAI/vart/cpu-runner/src/vis/: check_param_visitor.hpp
VAI/vart/cpu-runner/test/: bit8_2_bit4.cpp  glob_init.hpp  int2float.cpp  run_xmodel.cpp
VAI/vart/dpuv1-runner/: logging.ini  logging_mp.py  redis.conf  xdnn_env.py  xdnn_io.py  xdnn_rt.py  xdnn_rt_compiled.py  xdnn_rt_tf.py  xdnn_util.py  xstream.py
VAI/vart/dpuv1-runner/vitis/: CMakeLists.txt  README.md
VAI/vart/dpuv1-runner/vitis/cmake/: XilinxCommon.cmake
VAI/vart/dpuv1-runner/vitis/compiler/: compiler_options.cpp
VAI/vart/dpuv1-runner/vitis/include/dpu/: dpu_runner.hpp  tensor.hpp  tensor_buffer.hpp
VAI/vart/dpuv1-runner/vitis/python/dpu/: runner.py
VAI/vart/dpuv1-runner/vitis/src/: CMakeLists.txt
VAI/vart/dpuv1-runner/vitis/src/dpu/: CMakeLists.txt  dpu_runner.cpp  tensor.cpp  tensor_buffer.cpp
VAI/vart/sim-runner/: CMakeLists.txt
VAI/vart/sim-runner/config/: SIMCfg.txt
VAI/vart/sim-runner/include/: sim_runner.hpp  sim_tensor_buffer.hpp
VAI/vart/sim-runner/src/: sim_tensor_buffer.cpp
VAI/vart/sim-runner/src/buffer/: Bank.hpp  Buffer.hpp  DDR.cpp  DDR.hpp
VAI/vart/sim-runner/src/inst/: CBLoad.cpp  Conv.hpp  ConvInit.cpp  ConvInit.hpp  DptWise.hpp  Elew.hpp  ElewInit.cpp  ElewInit.hpp  End.hpp  InstFactory.hpp  InstTable.hpp  Load.cpp  Load.hpp  Pool.cpp  Pool.hpp  Save.cpp  Thd.hpp
VAI/vart/sim-runner/src/inst/parser/: parse.py
VAI/vart/sim-runner/src/inst/parser/python/: GenInstTable.py  GenInstTableList.py  Inst.py  Root.py  Word.py  __init__.py  parse.py
VAI/vart/sim-runner/src/inst/parser/xml/: dpu4f.xml  dpuv2.xml  dpuv3e.xml  dpuv4e.xml
VAI/vart/sim-runner/src/inst/pub/: DumpBank.hpp  DumpDDR.cpp  DumpDDR.hpp  DumpDDRSlice.hpp  Helper.hpp  InstBase.cpp  InstBase.hpp  ReadInst.cpp  ReadInst.hpp
VAI/vart/sim-runner/src/inst/xvdpu/: MECfg.hpp  MEUtil.hpp
VAI/vart/sim-runner/src/util/: Calc.cpp  ErrorCode.cpp  FMapTypes.hpp  LoadCfg.cpp  LoadCfg.hpp  Util.hpp
VAI/vart/sim-runner/test/: CMakeLists.txt  Simulator.cpp  check.py  test_helper.cpp
common/firmware/: shell.json  template.bif
k26/: Makefile  README.md  k26.mk
kd240/: Makefile  kd240.mk
kernels/: README
kernels/examples/som_aa1/: Makefile  dpu_conf.vh  xf_config_params.h  xf_pp_pipeline_accel.cpp
kernels/examples/som_aa2/: Makefile
kernels/examples/som_aa4/: Makefile  system.cfg  xf_canny_accel.cpp  xf_config_params.h  xf_edgetracing_accel.cpp
kr260/: Makefile  README.md  kr260.mk
kv260/: Makefile  README.md  kv260-smartcam-raspi_2022.1.dtsi  kv260.mk
kv260/overlays/aibox-reid/: xf_config_params.h  xf_pp_pipeline_accel.cpp
kv260/overlays/benchmark/: Makefile  dpu_conf.vh
kv260/overlays/defect-detect/: Makefile  system.cfg  xf_cca_custom_config.h  xf_threshold_config.h
kv260/overlays/nlp-smartvision/: Makefile
kv260/overlays/smartcam/: Makefile
libraries/IVAS/: LICENSE  NOTICE  README.md
libraries/IVAS/ivas-accel-sw-libs/ivas_xpp_pipeline/: meson.build
libraries/VAI/: README
petalinux/: Makefile
sdcard/: README_AA1_usage  README_AA2_usage  README_SOM_xmutil_usage  som_bootmode_EA0-BSP.tcl
(+465 files in other folders)
